force-app/main/default/objects/TokenStorage__c/TokenStorage__c.object-meta.xml
<CustomObject>
    <label>TokenStorage</label>
    <nameField>
        <label>TokenStorage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TokenStorages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>