force-app/main/default/objects/TokenStorage__c/fields/RefreshToken__c.field-meta.xml
<CustomField>
    <fullName>RefreshToken__c</fullName>
    <label>RefreshToken</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>