force-app/main/default/objects/TokenStorage__c/fields/TokenExpiration__c.field-meta.xml
<CustomField>
    <fullName>TokenExpiration__c</fullName>
    <label>TokenExpiration</label>
    <type>DateTime</type>
</CustomField>